fix label alignment for complex case
e.g. overtime-form
- submit empty form
- see error messages and not align "amount of overtime hours" label

closes #1630

--- a/src/main/css/components/form.css
+++ b/src/main/css/components/form.css
@@ -675,14 +675,8 @@ textarea.error {
       .uv-form__input-row {
         display: grid;
         grid-template-columns: subgrid;
-        /* align label with input */
-        align-items: center;
-
-        & + :is(textarea, :has(textarea)) {
-          /* textarea can be expanded in height, therefore baseline to have a fixed label position */
-          /* overrides center from above */
-          align-items: baseline;
-        }
+        /* align label with input while allowing multiline input (e.g. textarea, or a div with more elements) */
+        align-items: baseline;
 
         > label,
         > .uv-form__label {
